# dual_arm_manipulation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: debug_camera.yaml  debug_comm.yaml  debug_execution.yaml  debug_perception.yaml  dry_run.yaml  task_1.yaml  wbcd_task1_dry_run.yaml  wbcd_task1_tube_insert.yaml
docs/: architecture.md  cleanup_report.md  code_migration_report.md  execution_layer.md  external_execution_server.md  migration_report.md  perception_layer.md  task_1_pipeline.md  wbcd_task1_pipeline.md
legacy/cleanup_2026_05_18/tests/async_inference/: test_e2e.py  test_policy_server.py  test_robot_client.py
scripts/: _bootstrap.py  debug_apriltag.py  debug_camera.py  debug_comm.py  debug_perception.py  dry_run_task_1.py  execution_smoke_test.py  run_task.py  run_wbcd_task1.py  start_execution_server.py
src/bimanual_rule_control/: __init__.py
src/bimanual_rule_control/comm/: __init__.py  base.py  command_types.py  mock_client.py  nero_comm_adapter.py
src/bimanual_rule_control/comm/dual_agilex_nero/: __init__.py  config_nero.py  nero_dual_arm.py  nero_interface_client.py
src/bimanual_rule_control/core/: __init__.py  config.py  context.py  logger.py  result.py  types.py
src/bimanual_rule_control/perception/: __init__.py  base.py  result_types.py
src/bimanual_rule_control/perception/apriltag/: __init__.py  apriltag_detector.py
src/bimanual_rule_control/perception/cameras/: __init__.py  base_camera.py  camera_manager.py  frame_types.py  mock_camera.py  realsense_camera.py
src/bimanual_rule_control/perception/opencv/: __init__.py  hole_detector.py  rack_detector.py  tube_detector.py  utils.py
src/bimanual_rule_control/perception/yolo/: __init__.py  adapters.py  yolo_detector.py  yolo_segmentor.py
src/bimanual_rule_control/planning/: __init__.py  pose_planner.py  retry_policy.py  rule_engine.py  success_checks.py  task_stage.py
src/bimanual_rule_control/planning/controllers/: __init__.py  grasp_controller.py  insertion_controller.py  visual_servo.py
src/bimanual_rule_control/tasks/: __init__.py  main.py  task_1.py  task_2.py  task_3.py  task_router.py
src/wbcd_task1/: __init__.py
src/wbcd_task1/core/: __init__.py  config.py  exceptions.py  logger.py  result.py  types.py
src/wbcd_task1/execution/: __init__.py
src/wbcd_task1/execution/kinematics/: __init__.py  base.py  nero_solver.py  transforms.py
src/wbcd_task1/execution/sdk/: __init__.py  backend.py  mock_backend.py  nero_interface_backend.py  nero_sdk.py
src/wbcd_task1/execution/server/: __init__.py  agilex_server.py  command_dispatcher.py  command_types.py  nero_interface_server.py  safety_guard.py  state_types.py
src/wbcd_task1/perception/: __init__.py  base.py  result_types.py
src/wbcd_task1/perception/apriltag/: __init__.py  detector.py
src/wbcd_task1/planning/: __init__.py  recovery_policy.py  retry_policy.py  rule_engine.py  state_machine.py  success_checks.py
src/wbcd_task1/tasks/: __init__.py
tests/: conftest.py  test_config_loading.py  test_execution_layer_functions.ipynb  test_mock_client.py  test_nero_comm_adapter.py  test_nero_interface_backend_mapping.py  test_search_pattern.py  test_state_machine.py  test_task_1_dry_run.py  test_task_dry_run.py  test_task_router.py  test_transforms.py
(+24 files in other folders)
