[build-system]
requires = ["setuptools >= 40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agilex_teleop"
version = "1.0.0"
description = "Agilex nero arm control and teleoperation"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Key-Zzs" }
]
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "numpy<2.3,>=1.24",
    "scipy",
    "zerorpc>=0.6.1",
    "python-can>=3.3.4",
    "typing-extensions>=3.7.4.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
sim = [
    "pybullet==3.2.7",
    "ikpy==3.4.2",
    "meshcat==0.3.2",
]
dynamics = [
    "pinocchio>=3.0.0",
    "placo>=0.1.0",
    "eigenpy==3.12.0",
    "eiquadprog==1.3.0",
]

[project.urls]
Homepage = "https://github.com/Key-Zzs/agilex_teleop"
Repository = "https://github.com/Key-Zzs/agilex_teleop"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyAgxArm*", "nero*"]

[tool.setuptools.package-data]
pyAgxArm = ["py.typed", "*"]

[tool.setuptools]
include-package-data = true