[build-system]
requires = ["setuptools >= 40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_arm_manipulation"
version = "0.1.0"
description = "A modular bimanual manipulation framework using rule-based planning, visual servoing, and traditional perception-control pipelines"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Key-Zzs" }
]
license = { text = " Apache-2.0 license " }
requires-python = ">=3.10"
dependencies = [
    "numpy<2.3,>=1.24",
    "scipy",
    "zerorpc>=0.6.1",
    "python-can>=3.3.4",
    "typing-extensions>=3.7.4.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
sim = [
    "pybullet==3.2.7",
    "ikpy==3.4.2",
    "meshcat==0.3.2",
]
dynamics = [
    "pinocchio>=3.0.0",
    "placo>=0.1.0",
    "eigenpy==3.12.0",
    "eiquadprog==1.3.0",
]

[project.urls]
Homepage = "https://github.com/Key-Zzs/dual_arm_manipulation"
Repository = "https://github.com/Key-Zzs/dual_arm_manipulation"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wbcd_task1*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
