[build-system]
requires = ["setuptools>=71.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bimanual-rule-control"
version = "0.1.0"
description = "Lightweight traditional perception, planning, and communication stack for bimanual rule control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "PyYAML",
]

[project.optional-dependencies]
rpc = ["zerorpc"]
vision = ["opencv-python"]
yolo = ["ultralytics"]
realsense = ["pyrealsense2"]
apriltag = ["pupil-apriltags"]
dev = ["pytest>=8.1.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bimanual_rule_control*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = [
    "test_config_loading.py",
    "test_mock_client.py",
    "test_nero_comm_adapter.py",
    "test_task_router.py",
    "test_task_1_dry_run.py",
]
addopts = "-q"
